<resources>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_keypad">Iris+ Keypad</string>
    <string name="title_activity_video">Iris+ Video Player</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_donate">Donate</string>
    <string name="action_buy">Go Premium</string>
    <string name="action_switch_hub">Switch Hub</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in…</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="loading_progress">Loading</string>
    <string name="title_activity_pin">Enter Pin</string>
    <string name="app_name">Iris+</string>
    <string name="title_security">Security</string>
    <string name="title_control">Control</string>
    <string name="title_history">History</string>
    <string name="title_thermostat">Thermostat</string>
    <string name="title_locks">Locks</string>
    <string name="title_login">Login</string>
    <string name="title_devices">Devices</string>
    <string name="title_help">\?</string>
    <string name="title_voice">V</string>
    <string name="title_rules">Rules</string>
    <string name="title_presence">Presence</string>
    <string name="title_users">Users</string>
    <string name="title_care">Care</string>
    <string name="title_hub">Hub</string>
    <string name="title_cameras">Cameras</string>
    <string name="title_swingometer">Swingometer</string>
    <string name="title_usage">Energy Usage</string>
    <string name="title_petdoors">Pets</string>
    <string name="title_irrigation">Irrigation</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_scene">Scenes</string>
    <string name="title_ifttt">IFTTT Events Push</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_logs">Send Logs</string>
    <string name="action_settings">Settings</string>
    <string name="btn_home">Home</string>
    <string name="btn_away">Away</string>
    <string name="btn_night">Night</string>
    <string name="btn_vacation">Vacation</string>
    <string name="txt_mode">Home Mode</string>
    <string name="txt_alarm">Alarm Mode</string>
    <string name="btn_alarm_home">Off</string>
    <string name="btn_alarm_away">On</string>
    <string name="btn_alarm_night">Partial</string>
    <string-array name="thermostat_mode_array">
        <item>Cool</item>
        <item>Heat</item>
        <item>Auto</item>
        <item>Off</item>
    </string-array>
    <string-array name="pet_status_array">
        <item>LOCKED</item>
        <item>UNLOCKED</item>
        <item>AUTO</item>
    </string-array>
    <string-array name="awayDelayValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>60</item>
    </string-array>
    <string-array name="awayDelay">
        <item>1 Minute</item>
        <item>2 Minutes</item>
        <item>3 Minutes</item>
        <item>4 Minutes</item>
        <item>5 Minutes</item>
        <item>10 Minutes</item>
        <item>15 Minutes</item>
        <item>20 Minutes</item>
        <item>25 Minutes</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
    </string-array>
    <string-array name="partialOffValues">
        <item>Never</item>
        <item>0:0</item>
        <item>0:15</item>
        <item>0:30</item>
        <item>0:45</item>
        <item>1:0</item>
        <item>1:15</item>
        <item>1:30</item>
        <item>1:45</item>
        <item>2:0</item>
        <item>2:15</item>
        <item>2:30</item>
        <item>2:45</item>
        <item>3:0</item>
        <item>3:15</item>
        <item>3:30</item>
        <item>3:45</item>
        <item>4:0</item>
        <item>4:15</item>
        <item>4:30</item>
        <item>4:45</item>
        <item>5:0</item>
        <item>5:15</item>
        <item>5:30</item>
        <item>5:45</item>
        <item>6:0</item>
        <item>6:15</item>
        <item>6:30</item>
        <item>6:45</item>
        <item>7:0</item>
        <item>7:15</item>
        <item>7:30</item>
        <item>7:45</item>
        <item>8:0</item>
        <item>8:15</item>
        <item>8:30</item>
        <item>8:45</item>
        <item>9:0</item>
        <item>9:15</item>
        <item>9:30</item>
        <item>9:45</item>
        <item>10:0</item>
        <item>10:15</item>
        <item>10:30</item>
        <item>10:45</item>
        <item>11:0</item>
        <item>11:15</item>
        <item>11:30</item>
        <item>11:45</item>
        <item>12:0</item>
        <item>12:15</item>
        <item>12:30</item>
        <item>12:45</item>
        <item>13:0</item>
        <item>13:15</item>
        <item>13:30</item>
        <item>13:45</item>
        <item>14:0</item>
        <item>14:15</item>
        <item>14:30</item>
        <item>14:45</item>
        <item>15:0</item>
        <item>15:15</item>
        <item>15:30</item>
        <item>15:45</item>
        <item>16:0</item>
        <item>16:15</item>
        <item>16:30</item>
        <item>16:45</item>
        <item>17:0</item>
        <item>17:15</item>
        <item>17:30</item>
        <item>17:45</item>
        <item>18:0</item>
        <item>18:15</item>
        <item>18:30</item>
        <item>18:45</item>
        <item>19:0</item>
        <item>19:15</item>
        <item>19:30</item>
        <item>19:45</item>
        <item>20:0</item>
        <item>20:15</item>
        <item>20:30</item>
        <item>20:45</item>
        <item>21:0</item>
        <item>21:15</item>
        <item>21:30</item>
        <item>21:45</item>
        <item>22:0</item>
        <item>22:15</item>
        <item>22:30</item>
        <item>22:45</item>
        <item>23:0</item>
        <item>23:15</item>
        <item>23:30</item>
        <item>23:45</item>
    </string-array>
    <string-array name="partialOff">
        <item>Never</item>
        <item>12:00 AM</item>
        <item>12:15 AM</item>
        <item>12:30 AM</item>
        <item>12:45 AM</item>
        <item>1:00 AM</item>
        <item>1:15 AM</item>
        <item>1:30 AM</item>
        <item>1:45 AM</item>
        <item>2:00 AM</item>
        <item>2:15 AM</item>
        <item>2:30 AM</item>
        <item>2:45 AM</item>
        <item>3:00 AM</item>
        <item>3:15 AM</item>
        <item>3:30 AM</item>
        <item>3:45 AM</item>
        <item>4:00 AM</item>
        <item>4:15 AM</item>
        <item>4:30 AM</item>
        <item>4:45 AM</item>
        <item>5:00 AM</item>
        <item>5:15 AM</item>
        <item>5:30 AM</item>
        <item>5:45 AM</item>
        <item>6:00 AM</item>
        <item>6:15 AM</item>
        <item>6:30 AM</item>
        <item>6:45 AM</item>
        <item>7:00 AM</item>
        <item>7:15 AM</item>
        <item>7:30 AM</item>
        <item>7:45 AM</item>
        <item>8:00 AM</item>
        <item>8:15 AM</item>
        <item>8:30 AM</item>
        <item>8:45 AM</item>
        <item>9:00 AM</item>
        <item>9:15 AM</item>
        <item>9:30 AM</item>
        <item>9:45 AM</item>
        <item>10:00 AM</item>
        <item>10:15 AM</item>
        <item>10:30 AM</item>
        <item>10:45 AM</item>
        <item>11:00 AM</item>
        <item>11:15 AM</item>
        <item>11:30 AM</item>
        <item>11:45 AM</item>
        <item>12:00 PM</item>
        <item>12:15 PM</item>
        <item>12:30 PM</item>
        <item>12:45 PM</item>
        <item>1:00 PM</item>
        <item>1:15 PM</item>
        <item>1:30 PM</item>
        <item>1:45 PM</item>
        <item>2:00 PM</item>
        <item>2:15 PM</item>
        <item>2:30 PM</item>
        <item>2:45 PM</item>
        <item>3:00 PM</item>
        <item>3:15 PM</item>
        <item>3:30 PM</item>
        <item>3:45 PM</item>
        <item>4:00 PM</item>
        <item>4:15 PM</item>
        <item>4:30 PM</item>
        <item>4:45 PM</item>
        <item>5:00 PM</item>
        <item>5:15 PM</item>
        <item>5:30 PM</item>
        <item>5:45 PM</item>
        <item>6:00 PM</item>
        <item>6:15 PM</item>
        <item>6:30 PM</item>
        <item>6:45 PM</item>
        <item>7:00 PM</item>
        <item>7:15 PM</item>
        <item>7:30 PM</item>
        <item>7:45 PM</item>
        <item>8:00 PM</item>
        <item>8:15 PM</item>
        <item>8:30 PM</item>
        <item>8:45 PM</item>
        <item>9:00 PM</item>
        <item>9:15 PM</item>
        <item>9:30 PM</item>
        <item>9:45 PM</item>
        <item>10:00 PM</item>
        <item>10:15 PM</item>
        <item>10:30 PM</item>
        <item>10:45 PM</item>
        <item>11:00 PM</item>
        <item>11:15 PM</item>
        <item>11:30 PM</item>
        <item>11:45 PM</item>
    </string-array>
    <string-array name="chartType">
        <item>Usage</item>
        <item>Cost</item>
    </string-array>
    <string-array name="period">
        <item>Today</item>
        <item>Yesterday</item>
        <item>Week View</item>
        <item>Month View</item>
        <item>Last Month</item>
        <item>Year View</item>
    </string-array>
    <string-array name="alarmManagerType">
        <item>Normal</item>
        <item>Marshmallow</item>
        <item>Alarm</item>
    </string-array>
    <string-array name="retryValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="tempRange">
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
    </string-array>
</resources>